# HT6-Team

./: .env  .gitignore  README.md  package-lock.json
backend/: README.md  README_MODULAR.md  README_TEST.md  app.py  app_original.py  config.py  main.py  migrate_catalogue_to_mongo.py  models.py  pyproject.toml  simple_api_test.py  test_api.py  test_image_serving.py  test_opencv_detection.py  test_scraper.py  test_sdk.py  test_segmind_api.py  test_tryon_endpoint.py  test_tryon_final.py  test_twelvelabs.py  test_vellum_catalog.py  utils.py  zara_scraper.py
backend/ribbon/: README.md  ribbon_client.py  working_example.py
backend/routes/: garments.py  interview.py  recommendations.py  tryon.py  videos.py
backend/services/: body_detection.py  realtime_detection.py  recommendations.py  tryon.py  tryon_robust.py
backend/style_service/: __init__.py  vellum_style_service.py
backend/vellum/: README.md  example_usage.py  vellum_style_service.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/public/: Men's Pants _ ZARA Canada.html  ZW COLLECTION SATIN MAXI DRESS - Mink _ ZARA Canada.html
frontend/public/catalog/: catalog.json
frontend/src/: ApiTester.tsx  App.tsx  index.css
frontend/src/components/: App.tsx  CTA.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  RealtimeStreaming.tsx  SeamlessVideoStream.tsx
frontend/src/components/ui/: button.tsx  sonner.tsx
frontend/src/pages/: Final.tsx  interview.tsx  pick_clothes.tsx  take_photo.tsx
frontend/src/services/: streamingService.ts
(+5 files in other folders)
