[project]
name = "backend"
version = "0.1.0"
description = "Virtual Try-On API with video processing and AI recommendations"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "gradio-client>=1.3.0",
    "requests>=2.32.4",
    "werkzeug>=3.1.3",
    "pymongo>=4.6.0",
    "python-dotenv>=1.0.0",
    "uuid>=1.30",
    "twelvelabs>=0.1.0",
    "opencv-python>=4.12.0.88",
    "moviepy>=2.2.1",
]
